[package]
name = "wson_rs"
version = "0.2.4"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudios.com>"]
description = "WSON data serialization parser "
license = "MPL-2.0"
repository = "https://github.com/LunaStev/wson-rust"
publish = true

[lib]
name = "wson_rs"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
regex = "1.11.1"
once_cell = "1.20.2"
